# misc/openapi-generator-configs/openapi-generator-api/api.yaml
@@ -89,7 +89,9 @@ components:
         omitModelDocumentation:
           type: boolean
         omitApiDocumentation:
-          type: boolean
+            type: boolean
+        useSecurityKeyParamNameAsPropertyName:
+            type: boolean
         tagPriority:
           type: array
           items:
